ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: apitecnm-ingress
spec:
  rules:
    - host: api.dalvarado.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: apitecnm-service
                port:
                  number: 80
